src/test/examples/invalid/semanticErr/function/functionJunkAfterReturn.wacc
# function body not terminated with return or exit statement
# Output:
# #syntax_error# (used to be)
# #semantic error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 2;
    println "How on Earth did we get here?" 
  end

  int x = call f();
  println x
end
	
